removed api key from public access

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,5 +9,5 @@
 <!-- Replace the value of the key parameter with your own API key. -->
 <script type="text/javascript" src="data.js"></script>
 <script type="text/javascript" src="script.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnvqGpTfpnKImtQARBxHGwKoHAidbTDGs&libraries=visualization&callback=init"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=APIKEY&libraries=visualization&callback=init"></script>
 </html>
